--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,23 +1,13 @@
 {
   "branches": ["main"],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    ["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
     "@semantic-release/release-notes-generator",
     "@semantic-release/github",
     [
       "semantic-release-firefox-add-on",
-      {
-        "extensionId": "{d324f64b-b423-4c2b-a9b4-d415705c26a9}",
-        "targetXpi": "dist.xpi",
-        "channel": "listed"
-      }
+      { "extensionId": "{d324f64b-b423-4c2b-a9b4-d415705c26a9}", "targetXpi": "dist.xpi", "channel": "listed" }
     ],
-    [
-      "semantic-release-chrome",
-      {
-        "asset": "dist.zip",
-        "extensionId": "ffaloebcmkogfdkemcekamlmfkkmgkcf"
-      }
-    ]
+    ["semantic-release-chrome", { "asset": "dist.zip", "extensionId": "ffaloebcmkogfdkemcekamlmfkkmgkcf" }]
   ]
 }
