chore: wbfy this repo

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,7 @@ on:
 jobs:
   test:
     uses: WillBooster/reusable-workflows/.github/workflows/test.yml@main
+    with:
+      non_self_hosted: true
     secrets:
-      GH_TOKEN: ${{ secrets.GH_BOT_PAT }}
+      GH_TOKEN: ${{ secrets.PUBLIC_GH_BOT_PAT }}
