--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "bugs": {
     "url": "https://github.com/WillBooster/plantuml-visualizer/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/WillBooster/plantuml-visualizer.git"
-  },
+  "repository": "github:WillBooster/plantuml-visualizer",
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
   "scripts": {
@@ -64,7 +61,7 @@
     "cross-env": "7.0.3",
     "dotenv-cli": "4.1.1",
     "eslint": "8.9.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint-config-prettier": "8.4.0",
     "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-sort-class-members": "1.14.1",
@@ -88,5 +85,5 @@
     "svelte-preprocess": "4.10.1",
     "typescript": "4.5.5"
   },
-  "packageManager": "yarn@3.2.0-rc.15"
+  "packageManager": "yarn@3.2.0-rc.16"
 }
