ci: fix scripts

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "package": "rm -f \"*.tgz\" \"*.zip\" && yarn pack && yarn build && cd dist && bestzip ../dist.zip *",
     "prettify": "prettier --color --write \"**/{.*/,}*.{cjs,css,htm,html,js,json,json5,jsx,md,mjs,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "recreate-dist": "rm -Rf dist && mkdir dist && cp -r src/popup.html icon manifest.json dist/",
-    "release": "dotenv -- semantic-release",
-    "release-test": "yarn release -d",
+    "release": "yarn build && dotenv -- semantic-release",
     "start": "cross-env NODE_ENV=development yarn build-common -w",
     "typecheck": "tsc --noEmit --Pretty"
   },
