--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,12 @@
 name: Release
 on:
   schedule:
-    - cron: '0 5 * * 0'
+    - cron: 0 5 * * 0
 jobs:
   release:
     uses: WillBooster/reusable-workflows/.github/workflows/release.yml@main
     with:
-      non_self_hosted: true
+      dot_env_path: .env
     secrets:
+      DOT_ENV: ${{ secrets.DOT_ENV }}
       GH_TOKEN: ${{ secrets.PUBLIC_GH_BOT_PAT }}
