ci: fix test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,8 @@ on:
 jobs:
   test:
     uses: WillBooster/reusable-workflows/.github/workflows/test.yml@main
+    with:
+      dot_env_path: .env
     secrets:
+      DOT_ENV: ${{ secrets.DOT_ENV }}
       GH_TOKEN: ${{ secrets.PUBLIC_GH_BOT_PAT }}
