--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "zlib.es": "0.6.0"
   },
   "devDependencies": {
-    "@ampproject/rollup-plugin-closure-compiler": "0.27.0",
     "@babel/core": "7.17.5",
     "@babel/plugin-proposal-class-properties": "7.16.7",
     "@babel/plugin-proposal-numeric-separator": "7.16.7",
@@ -75,6 +74,7 @@
     "prettier-plugin-svelte": "2.6.0",
     "rollup": "2.67.3",
     "rollup-plugin-svelte": "7.1.0",
+    "rollup-plugin-terser": "7.0.2",
     "sass": "1.49.8",
     "semantic-release": "19.0.2",
     "semantic-release-chrome": "1.1.3",
