--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ jobs:
   release:
     uses: WillBooster/reusable-workflows/.github/workflows/release.yml@main
     with:
-      dot_env_path: .env
+      github_hosted_runner: true
     secrets:
       DOT_ENV: ${{ secrets.DOT_ENV }}
       GH_TOKEN: ${{ secrets.PUBLIC_GH_BOT_PAT }}
