--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
     "postinstall": "husky install",
-    "lint": "eslint --color \"./{src,__tests__,scripts}/**/*.{cjs,js,jsx,mjs,ts,tsx}\"",
+    "lint": "eslint --color \"./{__tests__,scripts,src}/**/*.{cjs,cts,js,jsx,mjs,mts,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
     "package": "rm -f \"*.tgz\" \"*.zip\" && yarn pack && yarn build && cd dist && bestzip ../dist.zip *",
-    "prettify": "prettier --color --write \"**/{.*/,}*.{cjs,css,htm,html,js,json,json5,jsx,md,mjs,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
+    "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,js,json,json5,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "recreate-dist": "rm -Rf dist && mkdir dist && cp -r src/popup.html icon manifest.json dist/",
     "release": "yarn build && dotenv -- semantic-release",
     "release-test": "dotenv -- semantic-release --dry-run",
@@ -66,6 +68,7 @@
     "eslint-plugin-sort-class-members": "1.16.0",
     "eslint-plugin-sort-destructure-keys": "1.4.0",
     "eslint-plugin-svelte3": "4.0.0",
+    "eslint-plugin-unicorn": "45.0.2",
     "husky": "8.0.2",
     "lint-staged": "13.1.0",
     "micromatch": "4.0.5",
