--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "target": "esnext",
     "typeRoots": ["./node_modules/@types", "./@types"]
   },
-  "include": ["src/**/*", "__tests__/**/*", "scripts/**/*"],
+  "include": ["scripts/**/*", "src/**/*", "tests/**/*"],
   "extends": "@tsconfig/svelte/tsconfig.json"
 }
