--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,9 @@ name: Release
 on:
   schedule:
     - cron: 0 5 * * 0
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: false
 jobs:
   release:
     uses: WillBooster/reusable-workflows/.github/workflows/release.yml@main
