--- a/.prettierignore
+++ b/.prettierignore
@@ -12,25 +12,13 @@ test-fixtures/
 *.min.js
 .yarn/
 .pnp.js
-
-3rd-party/
-android/
-ios/
-no-format/
-test-fixtures/
-*.d.ts
-*.min.js
-.yarn/
-.pnp.js
 dist.zip
 
 .devcontainer/
-.venv/
 dist/
 temp/
 Icon[]
-*.sqlite3
-*.sqlite3-journal
+!.keep
 # Created by https://www.toptal.com/developers/gitignore/api/windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows
 
