--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
     "postinstall": "husky install",
-    "lint": "eslint --color \"./{src,__tests__,scripts}/**/*.{cjs,js,jsx,mjs,ts,tsx}\"",
+    "lint": "eslint --color \"./{scripts,src,tests}/**/*.{cjs,cts,js,jsx,mjs,mts,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
     "package": "rm -f \"*.tgz\" \"*.zip\" && yarn pack && yarn build && cd dist && bestzip ../dist.zip *",
-    "prettify": "prettier --color --write \"**/{.*/,}*.{cjs,css,htm,html,js,json,json5,jsx,md,mjs,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
+    "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,js,json,json5,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "recreate-dist": "rm -Rf dist && mkdir dist && cp -r src/popup.html icon manifest.json dist/",
     "release": "yarn build && dotenv -- semantic-release",
     "release-test": "dotenv -- semantic-release --dry-run",
@@ -33,25 +35,25 @@
     "zlib.es": "0.6.0"
   },
   "devDependencies": {
-    "@babel/core": "7.20.12",
+    "@babel/core": "7.21.0",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-numeric-separator": "7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "7.21.0",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
-    "@babel/preset-typescript": "7.18.6",
+    "@babel/preset-typescript": "7.21.0",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@tsconfig/svelte": "3.0.0",
-    "@types/chrome": "0.0.213",
+    "@types/chrome": "0.0.217",
     "@types/eslint": "8.21.1",
     "@types/jquery": "3.5.16",
     "@types/micromatch": "4.0.2",
     "@types/sass": "1.43.1",
-    "@typescript-eslint/eslint-plugin": "5.52.0",
-    "@typescript-eslint/parser": "5.52.0",
-    "@willbooster/eslint-config-ts": "9.2.1",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
+    "@willbooster/eslint-config-ts": "10.0.8",
     "@willbooster/prettier-config": "9.1.1",
     "@willbooster/renovate-config": "9.5.0",
     "babel-plugin-transform-remove-console": "6.9.4",
@@ -59,30 +61,31 @@
     "conventional-changelog-conventionalcommits": "5.0.0",
     "cross-env": "7.0.3",
     "dotenv-cli": "7.0.0",
-    "eslint": "8.34.0",
+    "eslint": "8.35.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-sort-class-members": "1.16.0",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-svelte3": "4.0.0",
+    "eslint-plugin-unicorn": "45.0.2",
     "husky": "8.0.3",
     "lint-staged": "13.1.2",
     "micromatch": "4.0.5",
     "pinst": "3.0.0",
     "prettier": "2.8.4",
     "prettier-plugin-svelte": "2.9.0",
-    "rollup": "2.79.1",
+    "rollup": "3.17.3",
     "rollup-plugin-svelte": "7.1.3",
     "rollup-plugin-terser": "7.0.2",
-    "sass": "1.58.2",
+    "sass": "1.58.3",
     "semantic-release": "20.1.0",
     "semantic-release-chrome": "3.1.0",
     "semantic-release-firefox-add-on": "0.2.8",
     "sort-package-json": "2.4.1",
     "svelte": "3.55.1",
     "svelte-check": "3.0.4",
-    "svelte-preprocess": "4.10.7",
+    "svelte-preprocess": "5.0.1",
     "typescript": "4.9.5"
   },
   "packageManager": "yarn@4.0.0-rc.39"
