--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "release": "yarn build && dotenv -- semantic-release",
     "release-test": "dotenv -- semantic-release --dry-run",
     "start": "cross-env NODE_ENV=development yarn build-common -w",
+    "test": "playwright test",
+    "test/ci-setup": "playwright install chromium",
     "typecheck": "tsc --noEmit --Pretty"
   },
   "prettier": "@willbooster/prettier-config",
@@ -42,6 +44,7 @@
     "@babel/preset-env": "7.21.5",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.21.5",
+    "@playwright/test": "1.33.0",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.1.0",
     "@rollup/plugin-node-resolve": "15.0.2",
