--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
     "jquery": "3.7.0",
-    "zlib.es": "0.6.0"
+    "pako": "2.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.21.8",
@@ -53,6 +53,7 @@
     "@types/eslint": "8.37.0",
     "@types/jquery": "3.5.16",
     "@types/micromatch": "4.0.2",
+    "@types/pako": "2.0.0",
     "@types/sass": "1.43.1",
     "@typescript-eslint/eslint-plugin": "5.59.6",
     "@typescript-eslint/parser": "5.59.6",
